--- a/DesignPatterns/app/src/main/AndroidManifest.xml
+++ b/DesignPatterns/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
         </activity>
 
         <activity
-            android:name=".activity.FactoryPatternActivity"
+            android:name=".activity.factory.FactoryPatternActivity"
+            android:screenOrientation="nosensor"
+            android:windowSoftInputMode="adjustUnspecified|stateHidden" />
+        <activity
+            android:name=".activity.prototype.PrototypePatternActivity"
             android:screenOrientation="nosensor"
             android:windowSoftInputMode="adjustUnspecified|stateHidden" />
     </application>
